# yp-tools

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.guess  config.h.in  configure  configure.ac  configure.in  libnis.pc.in  mkinstalldirs  yp-tools.spec
etc/: Makefile.am  Makefile.in  nicknames
intl/: Makefile.in  libgettext.h
lib/: Makefile.am  Makefile.in  __host2ypbind3_binding.c  do_ypcall.c  getline.c  getline.h  getopt.h  host2ypbind3_binding.c  internal.h  libnis.map  nicknames.c  nicknames.h  taddr2host.c  taddr2port.c  xdrfile-test.c  yp-tools.h  yp_all_host.c  yp_all_host.h  yp_get_default_domain.c  yp_maplist.c  yp_master.c  yp_xdr.c  ypbind3_binding_dup.c  ypbind3_binding_free.c  ypbinderr_string.c  yperr_string.c
lib/rpcsvc/: yp_prot.h
m4/: ChangeLog  Makefile.in  getline.m4
man/: .cvsignore  Makefile.am  Makefile.in  domainname.8.in  nicknames.5.in  sedscript.in  yp_dump_binding.8  yp_dump_binding.8.in  ypcat.1.in  ypdomainname.8  ypmatch.1.in  yppasswd.1.in  yppoll.8.in  ypset.8.in  yptest.8.in  ypwhich.1.in
nss_nis6/: .cvsignore  Makefile.am  files-parse.c  libc-lock.h  libc-symbols.h  libnss_nis6.map  netgroup.h  nis-alias.c  nis-ethers.c  nis-grp.c  nis-hosts.c  nis-initgroups.c  nis-netgrp.c  nis-network.c  nis-proto.c  nis-publickey.c  nis-pwd.c  nis-rpc.c  nis-service.c  nis-spwd.c  nss-default.c  nss-nis6.c  nss-nis6.h  nss_loader-test.c  nsswitch.h
po/: ChangeLog  Makefile.in.in  Makevars  POTFILES.in  cat-id-tbl.c  de.gmo  de.po  sv.po  yp-tools.pot
src/: .cvsignore  Makefile.am  Makefile.in  domainname.c  yp_dump_binding.c  ypcat.c  ypclnt.c  ypmatch.c  yppasswd.c  yppasswd.h  yppasswd_xdr.c  yppoll.c  ypserv_test.c  ypset.c  yptest.c  ypwhich.c
