#
# Copyright (c) 1997, 1998, 1999, 2001 Thorsten Kukuk, Germany
#
# Author: Thorsten Kukuk <kukuk@suse.de>
#
AUTOMAKE_OPTIONS = 1.4 gnits
MAINT_CHARSET = latin1
#
CLEANFILES = *~ sedscript domainname.8 ypcat.1 ypmatch.1 yppasswd.1\
	yppoll.8 ypset.8 yptest.8 ypwhich.1 nicknames.5

EXTRA_DIST = domainname.8.in nisdomainname.8 ypdomainname.8\
	ypcat.1.in ypchfn.1 ypchsh.1 ypmatch.1.in yppasswd.1.in\
	yppoll.8.in ypset.8.in yptest.8.in ypwhich.1.in nicknames.5.in

man_MANS = ypcat.1 ypchfn.1 ypchsh.1 ypmatch.1 yppasswd.1 yppoll.8 ypset.8\
	 yptest.8 ypwhich.1 nicknames.5 @MAN_DOMAINNAME@
